--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             <i style="font-size: 100px;color: blueviolet;" class="fa fa-grav"></i><br><br>
             <h4>by Ly - cadet @lilmende <i class="fa fa-hand-spock-o fa-fw"></i></h4>
         </em>
-        <a href="https://github.com/LilianMS"><i class="fa fa fa-github-alt (inverse) on fa-circle fa-fw"></i></a> |
-        <a href="https://linkedin.com/in/mendeslilian"><i class="fa fa-linkedin fa-fw"></i></a> |
-        <a href="https://instagram.com/meta.coding"><i class="fa fa-instagram fa-fw"></i></a>
-        <br><br>
+        <p style="font-size: 1.5em;">
+            <a href="https://github.com/LilianMS"><i class="fa fa fa-github-alt (inverse) on fa-circle fa-fw"></i></a> |
+            <a href="https://linkedin.com/in/mendeslilian"><i class="fa fa-linkedin fa-fw"></i></a> |
+            <a href="https://instagram.com/meta.coding"><i class="fa fa-instagram fa-fw"></i></a>
+            <br><br>
+        </p>
         <p>Click here to read about the challenge <a href="https://github.com/mewmewdevart/42CSSTober">Github
                 Readme</a>.</p><br>
         <hr>
@@ -76,15 +78,19 @@
             <h2>Day #4</h2>
             <p>rainbow</p>
             <div class="day day4">
-                <!-- <div class="head">
-                    <div class="face">
-                        <div class="eyes">
-                            <div></div>
-                            <div></div>
+                <div class="c c1">
+                    <div class="c c2">
+                        <div class="c c3">
+                            <div class="c c4">
+                                <div class="c c5">
+                                    <div class="c c6">
+                                        <div class="c c7"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="smile"></div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="div-day">
@@ -106,15 +112,12 @@
             <h2>Day #6</h2>
             <p>gold</p>
             <div class="day day6">
-                <!-- <div class="head">
-                    <div class="face">
-                        <div class="eyes">
-                            <div></div>
-                            <div></div>
-                        </div>
-                        <div class="smile"></div>
+                <div class="moeda">
+                    <div class="moeda-face">
+                        <div class="number1a"></div>
+                        <div class="number1b"></div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="div-day">
@@ -133,13 +136,15 @@
             </div>
         </div>
     </div><!-- end main-->
-    <p><i class="fa fa-html5"></i>
-    <i class="fa fa-css3"></i>
-    <i class="fa fa-fa"></i>
-    <i class="fa fa-vscode"></i>
-    <i class="fa fa-linux"></i>
-    <i class="fa fa-firefox"></i></p>
-    
+    <p style="font-size: 1.5em;">
+        <i class="fa fa-html5"></i>
+        <i class="fa fa-css3"></i>
+        <i class="fa fa-fa"></i>
+        <i class="fa fa-vscode"></i>
+        <i class="fa fa-linux"></i>
+        <i class="fa fa-firefox"></i>
+    </p>
+
 </body>
 
 </html>
