--- a/index.html
+++ b/index.html
@@ -62,16 +62,9 @@
         <div class="div-day">
             <h2>Day #3</h2>
             <p>geek</p>
-            <div class="day day3">
-                <!-- <div class="head">
-                    <div class="face">
-                        <div class="eyes">
-                            <div></div>
-                            <div></div>
-                        </div>
-                        <div class="smile"></div>
-                    </div>
-                </div> -->
+            <div class="day3">
+                <div class="fundo"></div>
+                <div class="frente"></div>
             </div>
         </div>
         <div class="div-day">
