--- a/index.html
+++ b/index.html
@@ -128,6 +128,48 @@
                 </div> -->
             </div>
         </div>
+        <div class="div-day">
+            <h2>Day #18</h2>
+            <p>ghost</p>
+            <div class="day day7">
+                <!-- <div class="head">
+                    <div class="face">
+                        <div class="eyes">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div class="smile"></div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+        <div class="div-day">
+            <h2>#Bonus-1</h2>
+            <p>o sentido da vida...</p>
+            <div class="day">
+                <div class="bonus42">
+                    <div class="fundo-branco">
+                        <div class="ret1"></div>
+                        <div class="ret2"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="div-day">
+            <h2>#Bonus-4</h2>
+            <p>toalha</p>
+            <div class="day day7">
+                <!-- <div class="head">
+                    <div class="face">
+                        <div class="eyes">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div class="smile"></div>
+                    </div>
+                </div> -->
+            </div>
+        </div>
     </div><!-- end main-->
     <p style="font-size: 1.5em;">
         <i class="fa fa-html5"></i>
