--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
         <div class="div-day">
             <h2>Day #3</h2>
             <p>geek</p>
-            <div class="day3">
-                <div class="fundo"></div>
-                <div class="frente"></div>
+            <div class="day">
+                <div class="raio"></div>
+                <div class="oculos">
+                    <div class="eyeL"></div>
+                    <div class="haste"></div>
+                    <div class="eyeR"></div>
+                </div>
             </div>
         </div>
         <div class="div-day">
@@ -158,16 +162,9 @@
         <div class="div-day">
             <h2>#Bonus-4</h2>
             <p>toalha</p>
-            <div class="day day7">
-                <!-- <div class="head">
-                    <div class="face">
-                        <div class="eyes">
-                            <div></div>
-                            <div></div>
-                        </div>
-                        <div class="smile"></div>
-                    </div>
-                </div> -->
+            <div class="toalha">
+                <div class="fundo"></div>
+                <div class="frente"></div>
             </div>
         </div>
     </div><!-- end main-->
