--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
             <h2>Day #2</h2>
             <p>parasite</p>
             <div class="day day2">
-                <!-- <div class="head">
-                    <div class="face">
-                        <div class="eyes">
-                            <div></div>
-                            <div></div>
-                        </div>
-                        <div class="smile"></div>
+                <div class="body">
+                    <div class="bodyin">
+                        <div class="p left"></div>
+                        <div class="eye"></div>
+                        <div class="p right"></div><br>
+                        <div class="p left"></div>
+                        <div class="p right"></div>
+                        <div class="p left"></div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="div-day">
