--- a/index.html
+++ b/index.html
@@ -165,16 +165,33 @@
             </div>
         </div>
         <div class="div-day">
-            <h2>Day #22</h2>
-            <p>energy</p>
-            <div class="day day22">
-                <div class="energy-box">
-                    <div class="energy-top"></div>
+            <h2>Day #23</h2>
+            <p>dna</p>
+            <div class="day day23">
+                <div class="box-dna">
                     <div class="dna">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                    </div>
+                    <div class="dna">
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                    </div>
+                    <div class="dna">
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
+                        <div class="dna-div"></div>
                     </div>
                 </div>
             </div>
