--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
             </div>
         </div>
         <div class="div-day">
+            <h2>Day #19</h2>
+            <p>star</p>
+            <div class="day day19">
+                <div class="star-box">
+                    <div class="star"></div>
+                </div>
+            </div>
+        </div>
+        <div class="div-day">
             <h2>Day #22</h2>
             <p>energy</p>
             <div class="day day22">
