--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <div></div>
                     </div>
                 </div>
-                <div class="energy"></div>
+                <div class="energy-wrap"><div class="energy"></div></div>
             </div>
         </div>
         <div class="div-day">
