--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
             <h2>Day #7</h2>
             <p>virus</p>
             <div class="day day7">
-                <!-- <div class="head">
-                    <div class="face">
-                        <div class="eyes">
-                            <div></div>
-                            <div></div>
+                <div class="virus">
+                    <div class="virus-face">
+                        <div class="virus-wrap-eyes">
+                            <div class="virus-eyes"></div>
+                            <div class="virus-eyes"></div>
                         </div>
-                        <div class="smile"></div>
+                        <div class="virus-smile"></div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="div-day">
